[package]
name = "tileyolo"
version = "0.2.0"
edition = "2024"
description = "A simple raster-based XYZ tile server for serving GeoTIFFs"
license = "MIT"
repository = "https://github.com/evanjt/tileyolo"
readme = "README.md"
keywords = ["raster", "tiles", "gdal", "geotiff", "server"]
categories = ["science::geo", "web-programming::http-server"]

[lib]
name = "tileyolo"
path = "src/lib.rs"

[[bin]]
name = "tileyolo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["macros"] }
gdal = "0.18.0"
gdal-sys = "0.11.0"
image = "0.25.6"
tokio = { version = "1.44.2", features = ["full"] }
walkdir = "2.5.0"
indicatif = "0.17"
comfy-table = { version = "7.1.4", features = [ "tty", "custom_styling"] }
colorgrad = "0.7.1"
clap = { version = "4.5.37", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
rand = "0.9.1"
tempfile = "3.19.1"
